@@ -7,33 +7,43 @@
     <groupId>com.bfs.senword</groupId>
     <artifactId>bfs-word</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
-    <build>
-        <plugins>
-            <!-- jetty插件, 设定端口与context path -->
-            <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>jetty-maven-plugin</artifactId>
-                <configuration>
-                    <jvmArgs>-XX:PermSize=512m -XX:MaxPermSize=512m
-                        -XX:+CMSPermGenSweepingEnabled
-                        -XX:+CMSClassUnloadingEnabled</jvmArgs>
-                    <!-- <reload>automatic</reload> -->
-                    <!-- <scanIntervalSeconds>2</scanIntervalSeconds> -->
-                    <reload>manual</reload>
 
+    <name>demo</name>
+<description>Demo project for spring boot</description>
 
-                    <webAppConfig>
-                        <contextPath>/demo</contextPath>           //注释一   此处为项目的上下文路径
-                    </webAppConfig>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>6666</port>                                       //注释二   此处配置了访问的端口号
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+<parent>
+<groupId>org.springframework.boot</groupId>
+<artifactId>spring-boot-starter-parent</artifactId>
+<version>1.3.5.RELEASE</version>
+<relativePath/>
+</parent>
+
+<properties>
+<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+<java.version>1.8</java.version>
+</properties>
+
+<dependencies>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-web</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+</dependency>
+</dependencies>
+
+<build>
+<plugins>
+    <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+    </plugin>
+</plugins>
+</build>
+
 </project>
